[feat] Add CRUD operations for coupon
